<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleProfile_FS"
        style="@style/MainTheme.Title.Normal.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/profile_information" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spGender_FS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/age" />

        <EditText
            android:id="@+id/etAge_FS"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="0"
            android:inputType="number" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/height" />

        <EditText
            android:id="@+id/etHeight_FS"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="0"
            android:inputType="number" />

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/cm" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/etWeight_FS"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="0"
            android:inputType="number" />

        <TextView

            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/kg" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvTitleTimeSynch_FS"
        style="@style/MainTheme.Title.Normal.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/time_synchronization" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/synchronization_with_google_fit" />

        <EditText
            android:id="@+id/etTimeSynchronization_FS"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="0"
            android:inputType="number" />

        <TextView

            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/hour" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitleNotification_FS"
        style="@style/MainTheme.Title.Normal.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/notification" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Enable notification" />

        <CheckBox
            android:id="@+id/cbNotification_FS"
            style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp" />

    </LinearLayout>

</LinearLayout>