<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle_FAD"
        style="@style/MainTheme.Title.Big.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDate_FAD"
            style="@style/MainTheme.Description.Big.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00/00/00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/activity_time" />

        <EditText
            android:id="@+id/etActivityTime_FAD"
            style="@style/BlueEditAut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:gravity="right"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/description_selector" />

        <TextView
            android:id="@+id/etActivityTimeUnit_FAD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/distance" />

        <EditText
            android:id="@+id/etDistance_FAD"
            style="@style/BlueEditAut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:gravity="right"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/description_selector" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/meters" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStepContainer_FAD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/steps" />

        <EditText
            android:id="@+id/etStep_FAD"
            style="@style/BlueEditAut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:gravity="right"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/description_selector" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/step"
            android:textAllCaps="false" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/calories" />

        <EditText
            android:id="@+id/etCalories_FAD"
            style="@style/BlueEditAut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:gravity="right"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/description_selector" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/speed" />

        <EditText
            android:id="@+id/etSpeed_FAD"
            style="@style/BlueEditAut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:gravity="right"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/description_selector" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/km_h" />

    </LinearLayout>


</LinearLayout>