<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minWidth="300dp"
              android:orientation="vertical"
              android:paddingTop="24dp">

    <TextView
        android:id="@+id/tvTitle_DIL"
        style="@style/MainTheme.Title.Normal.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/profile_information"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"

        >

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spGender_DPL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp">

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/age"/>

        <EditText
            android:id="@+id/etAge_DPL"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="0"
            android:inputType="number"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"

        >

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/height"/>

        <EditText
            android:id="@+id/etHeight_DPL"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="0"
            android:inputType="number"
            />

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/cm"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"

        >

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/weight"/>

        <EditText
            android:id="@+id/etWeight_DPL"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="0"
            android:inputType="number"
            />

        <TextView

            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/kg"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="4dp"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/btnSave_DPL"
            style="@style/DialogButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/text_btn_save"/>

    </LinearLayout>

</LinearLayout>