<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingTop="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MainTheme.Title.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/choose_available_program" />

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/program" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spProgram_DAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <TextView
            style="@style/MainTheme.SubTitle.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/difficult" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spDifficult_DAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/MainTheme.SubTitle.Normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="@string/target" />

            <EditText
                android:id="@+id/tvTarget_DAP"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="right"
                android:hint="0"
                android:inputType="number"
                android:textColor="@color/grey_700" />

            <TextView
                android:id="@+id/tvUnit_DAP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="*"
                android:textColor="@color/red_700" />

            <TextView
                android:id="@+id/tvDescription_DAP"
                style="@style/MainTheme.SubTitle.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="10"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="4dp"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/btnSave_DAP"
            style="@style/DialogButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/text_btn_save" />

    </LinearLayout>

</LinearLayout>